# deep_read_rag_outer

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/connections/: __init__.py  pg.py  qdrant.py  redis.py
app/custom_exceptions/: decorators.py  exceptions.py  handlers.py
app/doc_handler/: __init__.py  doc_handler.py
app/embeddings/: __init__.py  embedding_factory.py  openrouter_embed.py
app/llm/: __init__.py  chat_factory.py  llm.py  prompt.py
app/migrations/: env.py
app/migrations/versions/: 1edfc4f60e2b_add_unique_constraint_for_the_documents_.py  254aa335251d_add_constraints_for_the_users_table.py  3f2db7fca42f_create_tables_user_collection_document.py  9f3d295dbd20_create_relationship_between_collection_.py  c1b067d0d9e2_add_constraints_for_the_collection_table.py
app/models/: __init__.py  base.py  collections.py  documents.py  users.py
app/models/mixins/: general_mixins.py
app/repositories/: __init__.py  collections.py  documents.py  users.py
app/routers/: __init__.py  collections.py  documents.py  health.py  root.py  users.py
app/schemes/: __init__.py  collections.py  documents.py  general.py  mixins.py  users.py
app/services/: __init__.py  ai.py  collections.py  documents.py  users.py
app/settings/: __init__.py  ai.py  base.py  pg.py  qdrant.py  redis.py  vector.py
